syntax = "proto3";

package ride;

option go_package = "github.com/your-repo/your-project/proto/ride;ride";

service RideService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateDriverLocation (UpdateDriverLocationRequest) returns (UpdateDriverLocationResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  double pickup_latitude = 2;
  double pickup_longitude = 3;
  double dropoff_latitude = 4;
  double dropoff_longitude = 5;
  string driver_id = 6; // optional: pre-selected driver
}

message CreateOrderResponse {
  string order_id = 1;
  string driver_id = 2;
  string status = 3;
}

message UpdateDriverLocationRequest {
  string driver_id = 1;
  double latitude = 2;
  double longitude = 3;
}

message UpdateDriverLocationResponse {
  string message = 1;
  // Include driver_id so clients know which driver was updated
  string driver_id = 2;
}

